
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raman_shop"
version = "0.1.0"
description = "A collection of packages for use in the raman lab at uw madison"
authors = [
  { name="Jonah O'Mara Schwartz", email="jschwartz36@wisc.edu" }
]
requires-python = ">=3.12.0"
dependencies = [
  "biopython>=1.84",
  "matplotlib>=3.8.4",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "regex>=2024.5.15",
  "requests>=2.31.0",
  "scikit-learn>=1.6.1",
  "scipy>=1.13.0",
  "seaborn>=0.13.2",
  "PyYAML>=0.2.5",
  "rdkit>=2025.3.3",
  "tqdm"
]

[tool.setuptools.packages.find]
include = ["raman_shop"]
exclude = ["pngs"]
